--- a/stylesheet.qss
+++ b/stylesheet.qss
@@ -1,7 +1,7 @@
 /* Main Window */
 
 QWidget#centralWidget {
-	background-image: url(:/new/prefix1/sternenhimmel.jpg);
+	background-image: url(:/intern/sternenhimmel.jpg);
 	/* background: rgb(38, 38, 38); */
 	/* background-image: url(./galaxy.jpg); */
 }
@@ -11,7 +11,7 @@ QPushButton {
 	background-color: rgb(125, 125, 125);
 	border-width: 2px;
 	border-style: solid;
-	border-color: rgb(12, 12, 12);
+	border-color: rgb(192, 192, 192);
 	border-radius: 15px;
     
 	background: qlineargradient(x1: 0, y1: 0.2, x2: 1, y2: 1,
@@ -26,7 +26,7 @@ QLabel {
 /* Alarm Window */
 
 QDialog#Alarm {
-	background-image: url(:/new/prefix1/sternenhimmel.jpg);
+	background-image: url(:/intern/sternenhimmel.jpg);
 }
 
 QLabel {
@@ -36,7 +36,7 @@ QLabel {
 /* Musik Window */
 
 QDialog#Music {
-	background-image: url(:/new/prefix1/sternenhimmel.jpg);
+	background-image: url(:/intern/sternenhimmel.jpg);
 }
 
 QListView {
@@ -54,6 +54,49 @@ QListView#tracklist:item:selected:!active {
 
 QLabel {
 	color: rgb(255, 255, 255);
+}
+
+
+QScrollBar:vertical {
+	border: 0px solid black;
+	background-color: rgba(20, 30, 40, 180);
+	margin: 20px 0 20px 0;
+	width: 40px;
+}
+
+QScrollBar::handle:vertical {
+	background-color: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 0,
+		stop: 0 #323232, stop: 0.8 #CECECE, stop: 1 #323232);
+	min-height: 20px;
+}
+
+QScrollBar::add-line:vertical {
+	border: 0px solid black;
+	background-color: qlineargradient(x1: 1, y1: 0, x2: 0, y2: 0,
+		stop: 0 #323232, stop: 0.8 #CECECE, stop: 1 #323232);
+	height: 24px;
+	subcontrol-position: bottom;
+	subcontrol-origin: margin;
+}
+
+QScrollBar::sub-line:vertical {
+	border: 0px solid black;
+	background-color: qlineargradient(x1: 1, y1: 0, x2: 0, y2: 0,
+		stop: 0 #323232, stop: 0.8 #CECECE, stop: 1 #323232);
+	height: 24px;
+	subcontrol-position: top;
+	subcontrol-origin: margin;
+}
+
+QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical {
+	border: 0px solid black;
+	width: 5px;
+	height: 5px;
+	background-color: white;
+}
+
+QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
+	background-color: white;
 }
 
 /* QSlider */
